--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -9,4 +9,38 @@
     list-style: none;
     text-decoration: none;
 }
+:root{
+
+    --color-bg: #1f1f38;
+    --color-bg-variant: #2c2c6c;
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-white: #fff;
+    --color-light: rgba(255, 255, 255, 0.6);
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --conttainer-width-sm: 90%;
+
+    --transition: all 400ms ease;
+}
+html{
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--color-bg);
+    color: var(--color-white);
+    line-height: 1.7;   
+}
+/*general styles*/
+.container{
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
 
