--- a/portfolio-app/src/components/portfolio/portfolio.css
+++ b/portfolio-app/src/components/portfolio/portfolio.css
@@ -19,6 +19,9 @@
 border-radius: 1.5rem;
 overflow: hidden;
 } 
+.water-img{
+    height: 280px;
+}
 .portfolio__item h3{
     margin: 1.2rem 0 2rem;
 }
