--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -11,7 +11,7 @@
 }
 :root{
 
-    --color-bg: #1f1f38;
+    --color-bg: #1f1f31;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
@@ -88,7 +88,7 @@ a:hover{
     width:max-content;
     display: inline-block;
     color: var(--color-primary);
-    padding:  0.75ren 1.2rem;
+    padding:  0.75rem 1.2rem;
     border-radius: 0.4rem;
     cursor: pointer;
     border: 1px solid var(--color-primary);
