--- a/portfolio-app/src/components/about/about.css
+++ b/portfolio-app/src/components/about/about.css
@@ -17,18 +17,21 @@
 .about__me-image{
     width: 22rem;
     border-radius: 2rem;
+    position: relative;
+    bottom: 16px;
     overflow: hidden;
-    transform: rotate(3deg);
+    transform: rotate(0deg);
     transition: var(--transition);
 }
 .about__me-image:hover{
-transform: rotate(0);
+transform: rotate(9deg);
 }
 
 .about__cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
+   
 }
 
 .about__card{
@@ -37,12 +40,13 @@ transform: rotate(0);
     border-radius: 1rem;
     padding: 2rem;
     text-align: center;
+    
 }
 
 .about__card:hover{
     background: transparent;
     border-color: var(--color-primary-variant);
-    cursor: default;
+    cursor: pointer;
 }
 
 .about__icon{
@@ -60,7 +64,7 @@ transform: rotate(0);
 }
 
 /*media query for md devices*/
-@media screen and (max-width: 1024){
+@media screen and (max-width: 1024px){
 
   .about__container{
     grid-template-columns: 1fr;
@@ -77,10 +81,15 @@ transform: rotate(0);
 
 
 /*media query for sm devices*/
-@media screen and (max-width: 600){
+@media screen and (max-width: 600px){
     .about__me{
         width: 65%;
         margin: 0 auto 3rem;
+        background: none;
+    }
+    .about__me-image{
+        position: relative;
+        right: 30px;
     }
     .about__cards{
         grid-template-columns: 1fr 1fr;
