--- a/portfolio-app/src/components/header/header.css
+++ b/portfolio-app/src/components/header/header.css
@@ -1,81 +1,78 @@
-.header{
-   height: 100vh;
-   padding-top: 1rem;
-   overflow: hidden;
+.header {
+  height: 100vh;
+  padding-top: 1rem;
+  overflow: hidden;
 }
 
-.header__container{
-    text-align: center;
-    height: 100%;
-    position: relative;
+.header__container {
+  text-align: left;
+  height: 100%;
+  position: relative;
 }
 
 /*CTA*/
-.cta{
-    margin-top: 2.5rem;
-    display: flex;
-    gap: 1.2rem;
-    justify-content: center;
+.cta {
+  margin-top: 2.5rem;
+  display: flex;
+  gap: 1.2rem;
+  justify-content: left;
 }
 
 /*header socials icons*/
 
-.header__socials{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-    
+.header__socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  position: absolute;
+  left: 0;
+  bottom: 3rem;
 }
 /*to make the icons in colomns*/
-.header__socials::after{
-    content: "";
-    width:1px;
-    height: 2rem;
-    background: var(--color-primary);
+.header__socials::after {
+  content: "";
+  width: 1px;
+  height: 2rem;
+  background: var(--color-primary);
 }
 
 /*me img*/
-.me{
-   
-   width: 35rem;
-   height: 35rem;
-   position: absolute;
-   left: calc(50% - 15em);
-   top: 6rem;
-   overflow: hidden;
-   padding: 5rem 1.5rem 1.5rem 1.5rem;
-   
-
+.me {
+  width: 35rem;
+  height: 35rem;
+  position: absolute;
+  left: calc(50% - 15em);
+  top: 8rem;
+  overflow: hidden;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+ 
 }
 
 /*scroll down*/
-.scroll__down{
-    position: absolute;
-    right: -2.3rem;
-    bottom: 8rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
+.scroll__down {
+  position: absolute;
+  right: -2.3rem;
+  bottom: 8rem;
+  transform: rotate(90deg);
+  font-weight: 300;
+  font-size: 0.9rem;
 }
 
 /*media query for md devices*/
-@media screen and (max-width: 1024){
-header{
+@media screen and (max-width: 1024px) {
+  header {
     height: 68vh;
-} 
+  }
 }
 
 /*media query for sm devices*/
-@media screen and (max-width: 600){
-    header{
+@media screen and (max-width: 600px) {
+  header {
     height: 100vh;
-}
-.header__socials,
-.scroll-down{
+  }
+  .header__socials,
+  .scroll-down {
     display: none;
-} 
+  }
 }
