--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -13,7 +13,7 @@
 
     --color-bg: #1f1f31;
     --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
+    --color-primary: #85bce4;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
@@ -104,6 +104,7 @@ a:hover{
 .btn-primary{
     background: var(--color-primary);
     color: var(--color-bg);
+    cursor: pointer;
 }
 
 img{
